# cells

./: .gitignore  LICENCE.md  Makefile  README.md  _custom_build.py  base_forces.hpp  base_pickle.hpp  bind.cpp  class_factory.hpp  container.def  container.makefile  dict.py  forces.cpp  forces.hpp  forces_pickle.hpp  init.py  initialisation.cpp  mesh.cpp  mesh.hpp  mesh.py  movie.sh  pickle.hpp  plot.hpp  plot.py  pyproject.toml  random.hpp  read.py  requirements.txt  run.py  slurm.sh  system.cpp  system.hpp  system.py  system_pickle.hpp  test.py  tools.cpp  tools.hpp  tools.py  vertex_model.py  vm.py
docs/: active_junction.tex  avm.tex  forces.tex  hexagon.tex  mesh.tex  preamble.tex  ref.bib
docs/figs/: create.tex  delete.tex  he.tex  schematic.tex  t1.tex
docs/src/: create.tex  fmu.tex  merge.tex  t1.tex
src/: _custom_build.py
src/cells/: Makefile  analysis.hpp  assert.hpp  base.hpp  base_forces.hpp  base_integrators.hpp  base_pickle.hpp  bind.cpp  class_factory.hpp  forces.cpp  forces.hpp  forces_pickle.hpp  init.py  initialisation.cpp  integrators.cpp  integrators.hpp  integrators_pickle.hpp  keratin.py  keratin_protocol_debug.py  mesh.cpp  mesh.hpp  movie.sh  plot.hpp  plot.py  read.py  run.py  system.cpp  system.hpp  system_pickle.hpp  tools.cpp  tools.hpp  vm.py
