# This configuration file defines instructions to install the `cells` package.
# Installation instructions are provided in README.md.
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
# https://setuptools.pypa.io/en/stable/userguide/datafiles.html
# https://stackoverflow.com/questions/74409966/how-to-replace-setup-py-with-a-pyproject-toml-for-a-native-c-build-dependency

[build-system]
requires = ["setuptools>=61.0", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "cells"
description = "Python3 library written in C++ to integrate vertex models."
authors = [
    {name = "Yann-Edwin Keta", email = "keta@lorentz.leidenuniv.nl"},
    {name = "Silke Henkes", email = "shenkes@lorentz.leidenuniv.nl"}]
version = "0.0.0"
readme = "README.md"
license = {text = "MIT Licence"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++"]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/yketa/cells"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["cells", "cells/docs"]
exclude = ["_*"]
namespaces = true

[tool.setuptools.package-data]
cells = ["docs/*.pdf", "*.sh", "*.so"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.cmdclass]
build = "_custom_build.build"

